Added images and icons for iOS and Android example

--- a/example/android/.project
+++ b/example/android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RNSkia</name>
+	<name>Skia Example</name>
 	<comment>Project android_ created by Buildship.</comment>
 	<projects>
 	</projects>
