Moved library into package to not collide with externals when creating pods etc

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -131,7 +131,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.rnskia"
+        applicationId "com.shopify.reactnative.skia.example"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
