--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build-skia-android-x64": "ts-node ./scripts/build-externals.ts android x64",
     "build-skia-ios-fatlibs": "ts-node ./scripts/build-ios-fat-lib.ts",
     "build-skia-ios": "yarn build-skia-ios-x64 && yarn build-skia-ios-arm64 && yarn build-skia-ios-arm && yarn build-skia-ios-fatlibs",
-    "build-skia-android": "yarn build-skia-android-x64 && yarn build-skia-android-arm64 && yarn build-skia-android-arm"
+    "build-skia-android": "yarn build-skia-android-x64 && yarn build-skia-android-arm64 && yarn build-skia-android-arm",
+    "build-skia": "yarn build-skia-ios && yarn build-skia-android"
   },
   "author": "",
   "license": "ISC"
