--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/node": "^16.11.7",
+    "clang-format": "^1.6.0",
     "react": "^16.9.0",
     "react-native": "^0.61.5",
-    "@types/node": "^16.11.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
@@ -25,7 +26,13 @@
     "build-skia-ios-fatlibs": "ts-node ./scripts/build-ios-fat-lib.ts",
     "build-skia-ios": "yarn build-skia-ios-x64 && yarn build-skia-ios-arm64 && yarn build-skia-ios-arm && yarn build-skia-ios-fatlibs",
     "build-skia-android": "yarn build-skia-android-x64 && yarn build-skia-android-arm64 && yarn build-skia-android-arm",
-    "build-skia": "yarn build-skia-ios && yarn build-skia-android"
+    "build-skia": "yarn build-skia-ios && yarn build-skia-android",
+    "precommit": "yarn lint-java && yarn clang-format",
+    "lint-java": "node ./scripts/lint-java.js",
+    "clang-format": "yarn clang-format-ios && yarn clang-format-android && yarn clang-format-common",
+    "clang-format-ios": "find package/ios/ -iname *.h -o -iname *.m -o -iname *.cpp | xargs clang-format -i",
+    "clang-format-android": "find package/android/src/ -iname *.h -o -iname *.m -o -iname *.cpp | xargs clang-format -i",
+    "clang-format-common": "find package/cpp/ -iname *.h -o -iname *.m -o -iname *.cpp | xargs clang-format -i"
   },
   "author": "",
   "license": "ISC"
