Renamed some scripts and copied some files

--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
   "devDependencies": {
     "@types/node": "^16.11.7",
     "clang-format": "^1.6.0",
-    "react": "^16.9.0",
-    "react-native": "^0.61.5",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
   "scripts": {
-    "build-skia-ios-arm": "ts-node ./scripts/build-externals.ts ios arm",
-    "build-skia-ios-arm64": "ts-node ./scripts/build-externals.ts ios arm64",
-    "build-skia-ios-x64": "ts-node ./scripts/build-externals.ts ios x64",
-    "build-skia-android-arm": "ts-node ./scripts/build-externals.ts android arm",
-    "build-skia-android-arm64": "ts-node ./scripts/build-externals.ts android arm64",
-    "build-skia-android-x86": "ts-node ./scripts/build-externals.ts android x86",
-    "build-skia-android-x64": "ts-node ./scripts/build-externals.ts android x64",
-    "build-skia-ios-fatlibs": "ts-node ./scripts/build-ios-fat-lib.ts",
+    "build-skia-ios-arm": "ts-node ./scripts/build-skia.ts ios arm",
+    "build-skia-ios-arm64": "ts-node ./scripts/build-skia.ts ios arm64",
+    "build-skia-ios-x64": "ts-node ./scripts/build-skia.ts ios x64",
+    "build-skia-android-arm": "ts-node ./scripts/build-skia.ts android arm",
+    "build-skia-android-arm64": "ts-node ./scripts/build-skia.ts android arm64",
+    "build-skia-android-x86": "ts-node ./scripts/build-skia.ts android x86",
+    "build-skia-android-x64": "ts-node ./scripts/build-skia.ts android x64",
+    "build-skia-ios-fatlibs": "ts-node ./scripts/build-skia-ios-fatlibs.ts",
     "build-skia-ios": "yarn build-skia-ios-x64 && yarn build-skia-ios-arm64 && yarn build-skia-ios-arm && yarn build-skia-ios-fatlibs",
     "build-skia-android": "yarn build-skia-android-x64 && yarn build-skia-android-arm64 && yarn build-skia-android-arm",
     "build-skia": "yarn build-skia-ios && yarn build-skia-android",
