--- a/package/package.json
+++ b/package/package.json
@@ -2,7 +2,7 @@
   "name": "@shopify/react-native-skia",
   "title": "React Native Skia",
   "version": "1.0.0",
-  "description": "TODO",
+  "description": "Skia View for React Native",
   "main": "index.ts",
   "files": [
     "README.md",
