--- a/package/android/.settings/org.eclipse.buildship.core.prefs
+++ b/package/android/.settings/org.eclipse.buildship.core.prefs
@@ -2,7 +2,7 @@ arguments=
 auto.sync=false
 build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(7.0-rc-1))
-connection.project.dir=../../example/android
+connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=/Applications/Android Studio.app/Contents/jre/Contents/Home
