--- a/package/package.json
+++ b/package/package.json
@@ -33,5 +33,9 @@
     "react": ">=16.8.1",
     "react-native": ">=0.63.0-rc.0 <1.0.x"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react-native": "^0.65.0",
+    "react": "17.0.2",
+    "react-native": "0.66.2"
+  }
 }
