--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "pod-install": "npx pod-install ios"
+    "pod-install": "npx pod-install ios",
+    "android-reverse-tcp": "adb devices | grep '\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} adb -s {} reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
     "@shopify/react-native-skia": "link:../package/",
