Android: updated cmakelist definition in gradle

--- a/package/android/build.gradle
+++ b/package/android/build.gradle
@@ -67,7 +67,8 @@ android {
 
     externalNativeBuild {
         cmake {
-            path "CMakeLists.txt"
+            path file('CMakeLists.txt')
+            version '3.10.2'
         }
     }
 
