--- a/package/android/CMakeLists.txt
+++ b/package/android/CMakeLists.txt
@@ -26,6 +26,8 @@ add_library(
         
         "${PROJECT_SOURCE_DIR}/cpp/jsi/JsiHostObject.cpp"
 
+        "${PROJECT_SOURCE_DIR}/cpp/utils/RNSKDispatchQueue.cpp"
+
         "${PROJECT_SOURCE_DIR}/cpp/rnskia/RNSkManager.cpp"
         "${PROJECT_SOURCE_DIR}/cpp/rnskia/RNSkDrawView.cpp"
 
