--- a/package/android/.settings/org.eclipse.buildship.core.prefs
+++ b/package/android/.settings/org.eclipse.buildship.core.prefs
@@ -1,13 +1,13 @@
 arguments=
 auto.sync=false
 build.scans.enabled=false
-connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
+connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(7.0-rc-1))
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=
+java.home=/Applications/Android Studio.app/Contents/jre/Contents/Home
 jvm.arguments=
 offline.mode=false
-override.workspace.settings=false
-show.console.view=false
-show.executions.view=false
+override.workspace.settings=true
+show.console.view=true
+show.executions.view=true
