--- a/example/package.json
+++ b/example/package.json
@@ -25,6 +25,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
+    "glob-to-regexp": "^0.4.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
